#69381 - Case - fields mandatory #69382 - No limitation in field length

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-datetime-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-datetime-control.component.html
@@ -1,2 +1,4 @@
 <!-- <mbsc-datetime #datetime [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{ formControl.label }}</mbsc-datetime> -->
-<mbsc-input #control [ngModel]="value | dateTimeFormat">{{ formControl.label }}</mbsc-input>
+<mbsc-input #control [ngModel]="value | dateTimeFormat" 
+[error]="getErrorState()"
+[errorMessage]="getErrorMessage()">{{ formControl.label }}</mbsc-input>
