--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/date/case-date-control.component.html
@@ -1,2 +1,4 @@
-<mbsc-calendar #date [(ngModel)]="value" [options]="options">{{ formControl.label }}</mbsc-calendar>
+<mbsc-calendar #date [(ngModel)]="value" [options]="options" 
+[error]="getErrorState()"
+[errorMessage]="getErrorMessage()">{{ formControl.label }}</mbsc-calendar>
 <!-- <mbsc-input #control [ngModel]="value | dateFormat" >{{ field.label }}</mbsc-input> -->
