#69586 - updated fields invisibility approach

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
@@ -1,6 +1,6 @@
-<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()" [ngClass]="'select-textarea'">{{ getHeader }}{{ requiredSymbol }}</mbsc-textarea> 
-<ng-container [formGroup]="form">
-  <mbsc-select #select [formControlName]="field.name" [options]="settings"
+<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()" [ngClass]="'select-textarea'"
   [error]="getErrorState()"
-  [errorMessage]="getErrorMessage()"></mbsc-select>
+  [errorMessage]="getErrorMessage()">{{ getHeader }}{{ requiredSymbol }}</mbsc-textarea> 
+<ng-container [formGroup]="form">
+  <mbsc-select #select [formControlName]="field.name" [options]="settings"></mbsc-select>
 </ng-container>
