--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textbox/case-textbox-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/textbox/case-textbox-control.component.html
@@ -1,5 +1,6 @@
 <ng-container [formGroup]="form">
-    <mbsc-input #input [formControlName]="field.name" [error]="getErrorState()" [errorMessage]="getErrorMessage()">{{ formControl.label }}{{ requiredSymbol }}</mbsc-input> 
+    <mbsc-input #input [formControlName]="field.name" [error]="getErrorState()"
+     [errorMessage]="getErrorMessage()">{{ formControl.label }}{{ requiredSymbol }}</mbsc-input> 
 <!--
     <label>
         {{field.Label}}
