Fixed mobiscroll styling issues.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
@@ -32,3 +32,11 @@
   display: block;
 }
 
+
+::ng-deep {
+  .mbsc-select.mbsc-input {
+    margin:0px!important;
+    input { border-bottom: 0px!important; }
+  }
+}
+
