--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-dropdown-control.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-  <mbsc-select #control [formControlName]="field.name" class="dhselect"
+  <mbsc-select #control [formControlName]="field.name" 
               [options]="settings"
               [data]="localDataSource"
               [error]="getErrorState()"
