#69741 - Improve usability in mobile - change multi level control (select lowest level)

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -102,6 +102,27 @@ mbsc-textarea textarea:disabled {
       padding-top: 0;
     }
   }
+
+  .calendar-option {
+    float: right;
+    color: #4eccc4;
+    //font-size: 1.5em;
+  }
+
+  &.root {
+    .back-btn {
+      display: none;
+    }
+  }
+
+  &.hasChild {
+    .mbsc-fr-btn-s {
+      .mbsc-fr-btn {
+        color: black;
+        opacity: .5;
+      }
+    }
+  }
 }
 
  
@@ -328,4 +349,3 @@ ul.nostyle {
     }
   }
 }
-
