#69741 - Improve usability in mobile - change multi level control (select lowest level) - added filtering and updated UI

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -119,6 +119,10 @@ mbsc-textarea textarea:disabled {
       }
     }
   }
+
+  .mbsc-fr-hdr, .mbsc-fr-btn {
+    text-transform: capitalize
+  }
 }
 
 mbsc-calendar {
