#69382 - No limitation in field length

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -1,9 +1,9 @@
 
 <ng-container [formGroup]="form" *ngIf="externalLogField || internalLogField">
-  <mbsc-textarea *ngIf="externalLogField" 
+  <mbsc-textarea *ngIf="externalLogField" #external
                 [formControlName]="externalLogField.name">{{ externalLogLabel }}</mbsc-textarea>
 
-  <mbsc-textarea *ngIf="internalLogField" 
+  <mbsc-textarea *ngIf="internalLogField" #internal
                  [formControlName]="internalLogField.name">{{ internalLogLabel }}</mbsc-textarea>
   
   <div id="log-files" *ngIf="files && files.length > 0">
