Project issue fix. Code clean up and improvements;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -264,6 +264,7 @@ a {
 }
 
 .header {
+    color:$font-header-color;
     background: $primary-color;
     .navbar-brand {
         background: url(../img/dhhelpdesk.png);
