--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
@@ -1,6 +1,6 @@
 <mbsc-hamburger-nav #navMenu="mobiscroll" [options]="filterMenuOptions"  
   [class.selected]="isFilterApplied">
-  <mbsc-nav-item *ngFor="let item of menuItems" 
+  <mbsc-nav-item *ngFor="let item of menuItems; trackBy:trackByFn" 
       [id]="item.id"
       [selected]="item.selected"
       (click)="applyFilter(item.id)">{{ item.text }}</mbsc-nav-item>
