--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/footer/footer.component.html
@@ -3,8 +3,8 @@
       <mbsc-nav-item data-icon="fa-home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="" translate>Hem</mbsc-nav-item>
       <mbsc-nav-item data-icon="fa-plus" routerLinkActive="active" routerLink="/createcase" [disabled]="!(canCreateCases$ | async)"  translate>Lägg till</mbsc-nav-item>
       <mbsc-nav-item data-icon="fa-list" routerLinkActive="active" routerLink="/casesoverview" translate>Översikt</mbsc-nav-item>
-      <mbsc-nav-item data-icon="fa-globe" [disabled]="!languageId && !isLoadingLanguage" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
+      <mbsc-nav-item data-icon="fa-globe" (click)="openLanguages()" translate>Språk</mbsc-nav-item>
       <mbsc-nav-item data-icon="fa-power-off" (click)="logout()" translate>Logga ut</mbsc-nav-item>
   </mbsc-bottom-nav>
 
-  <mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>
+  <!--<mbsc-select [(ngModel)]="languageId" [options]="languagesSettings" #languages hidden></mbsc-select>-->
