--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -20,7 +20,7 @@
     </div>
   </mbsc-form>
 
-<mbsc-form  class="case-content">
+<mbsc-form [options]="formOptions" #mainForm  class="case-content">
 
     <!-- Case Actions -->
     <div [hidden]="currentTab != 'case_actions'">
@@ -33,8 +33,8 @@
     <div *ngIf="isLoaded" [hidden]="currentTab != 'case_details'">
       <div class="md-paging">
         <form [formGroup]="form" novalidate>
-            <mbsc-form-group collapsible [open]="isNewCase" #initiatorSection *ngIf="hasSection(caseSectionTypes.Initiator)">
-                <mbsc-form-group-title>{{ getSectionHeader(caseSectionTypes.Initiator) }}</mbsc-form-group-title>
+            <mbsc-form-group collapsible [open]="isNewCase" *ngIf="hasSection(caseSectionTypes.Initiator)">
+                <mbsc-form-group-title >{{ getSectionHeader(caseSectionTypes.Initiator) }}</mbsc-form-group-title>
                 <mbsc-form-group-content>
                     <!-- TODO: ComputerUserCategories -->
                     <notifier-search *ngIf="showField(caseFieldsNames.ReportedBy)" id="initiatorNotifier" [field]="getField(caseFieldsNames.ReportedBy)" [notifierType]="notifierTypes.Initiator" [form]="form"></notifier-search>
