#69812 added style in styles.scss, might not be proper

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -79,7 +79,14 @@ $error-color:  #d8332a;
 
 mbsc-textarea textarea:disabled {
     opacity: 0.5;
-}  
+} 
+
+.mbsc-select, .mbsc-input {
+      input:disabled {
+        background-color: #dfdfdf;
+      }
+}
+
 
 //mobiscroll theme overrides
 .mbsc-mobiscroll {
