#69383 - Edit field - User id & Regarding fields;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -37,7 +37,8 @@
                 <mbsc-form-group-title >{{ getSectionHeader(caseSectionTypes.Initiator) }}</mbsc-form-group-title>
                 <mbsc-form-group-content>
                     <!-- TODO: ComputerUserCategories -->
-                    <notifier-search *ngIf="showField(caseFieldsNames.ReportedBy)" id="initiatorNotifier" [field]="getField(caseFieldsNames.ReportedBy)" [notifierType]="notifierTypes.Initiator" [form]="form"></notifier-search>
+                    <notifier-search *ngIf="showField(caseFieldsNames.ReportedBy)" id="initiatorNotifier" [categoryField]="getField(caseFieldsNames.UserSearchCategoryId)" 
+                        [field]="getField(caseFieldsNames.ReportedBy)" [notifierType]="notifierTypes.Initiator" [form]="form"></notifier-search>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.PersonName)" [field]="getField(caseFieldsNames.PersonName)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.PersonEmail)" [field]="getField(caseFieldsNames.PersonEmail)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.PersonPhone)" [field]="getField(caseFieldsNames.PersonPhone)" [form]="form"></case-textbox-control>
@@ -55,7 +56,8 @@
                 <mbsc-form-group-title>{{ getSectionHeader(caseSectionTypes.Regarding) }}</mbsc-form-group-title>
                 <mbsc-form-group-content >
                     <!-- TODO: ComputerUserCategories -->
-                    <notifier-search *ngIf="showField(caseFieldsNames.IsAbout_ReportedBy)" id="regardingNotifier" [field]="getField(caseFieldsNames.IsAbout_ReportedBy)" [notifierType]="notifierTypes.Regarding" [form]="form"></notifier-search>                    
+                    <notifier-search *ngIf="showField(caseFieldsNames.IsAbout_ReportedBy)" id="regardingNotifier" [categoryField]="getField(caseFieldsNames.IsAbout_UserSearchCategoryId)" 
+                        [field]="getField(caseFieldsNames.IsAbout_ReportedBy)" [notifierType]="notifierTypes.Regarding" [form]="form"></notifier-search>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.IsAbout_PersonName)" [field]="getField(caseFieldsNames.IsAbout_PersonName)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.IsAbout_PersonEmail)" [field]="getField(caseFieldsNames.IsAbout_PersonEmail)" [form]="form"></case-textbox-control>
                     <case-textbox-control *ngIf="showField(caseFieldsNames.IsAbout_PersonPhone)" [field]="getField(caseFieldsNames.IsAbout_PersonPhone)" [form]="form"></case-textbox-control>
