--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
@@ -1,6 +1,7 @@
-<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()" [ngClass]="'select-textarea'"
+<mbsc-textarea #textbox [(ngModel)]="text" [readonly]="true" (click)="openSelect()"
   [error]="getErrorState()"
-  [errorMessage]="getErrorMessage()">{{ getHeader }}{{ requiredSymbol }}</mbsc-textarea> 
+  [errorMessage]="getErrorMessage()"
+  [ngClass]="{ 'select-textarea': true, 'disabled': formControl.disabled }">{{ getHeader }}{{ requiredSymbol }}</mbsc-textarea> 
 <ng-container [formGroup]="form">
   <mbsc-select #select [formControlName]="field.name" [options]="settings"></mbsc-select>
 </ng-container>
