#69880 - Add more than one photo - Communication section (iPhone);

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -11,7 +11,7 @@ $action-color: #007aff;
 $border-color:#ccc;
 $font-header-color: white;
 $error-color:  #d8332a;
-$disabled-color: #dfdfdf;
+$disabled-color: #f2f2f2;
 
 .login {
     .mbsc-page {
