--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/notifier-search/notifier-search.component.html
@@ -12,4 +12,4 @@
     </div>
   </div>
 </ng-container>
-<mbsc-select *ngIf="!isFormControlDisabled" #notifierSelect [options]="selectOptions" [data]="notifiersData"></mbsc-select>
+<mbsc-select filterExt *ngIf="!isFormControlDisabled" #notifierSelect [options]="selectOptions" [data]="notifiersData"></mbsc-select>
