--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.html
@@ -1,7 +1,7 @@
-<div>  
+<div>
   <label for="logfileupload">
-      <input type="file" id="logfileupload" name="logfileupload" class="fileupload"
-              ng2FileSelect [uploader]="fileUploader" multiple />
-      <span class="mbsc-btn mbsc-btn-ic mbsc-ic mbsc-ic-fa-upload" translate>Bifoga</span>
+    <input type="file" id="logfileupload" name="logfileupload" class="fileupload" ng2FileSelect
+      [uploader]="fileUploader" multiple />
+    <span class="mbsc-btn mbsc-btn-ic mbsc-ic mbsc-ic-fa-upload" translate>Bifoga</span>
   </label>
 </div>
