--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/log-files-upload/log-files-upload.component.scss
@@ -1,5 +1,7 @@
 :host {
-  display: block!important;  
+  display: block!important;
+  border-top: solid 1px #e8e8e8;
+  border-bottom: solid 1px #ccc;
 }
 
 input.fileupload {  
