[FIX] Translations Startpage

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
@@ -9,8 +9,8 @@
     <p translate>Med den här applikationen kan du</p>
     <ul>
       <li translate>Skapa ärenden</li>
-      <li translate>Läsa ärenden</li>
       <li translate>Redigera ärenden</li>
+      <li translate>Tilldela ärenden</li>
     </ul>
     <p translate>Hoppas du gillar den!</p>
     <p translate>DH Helpdesk utvecklingsteam​<br>
