[FIX] Translation startpage

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
@@ -13,8 +13,8 @@
       <li translate>Tilldela ärenden</li>
     </ul>
     <p translate>Hoppas du gillar den!</p>
-    <p translate>DH Helpdesk utvecklingsteam​<br>
-    <a href="mailto:support@dhsolutions.se">support@dhsolutions.se</a>​</p>
+    <p translate>DH Helpdesk utvecklingsteam​</p>
+    <a href="mailto:support@dhsolutions.se">support@dhsolutions.se</a>​
   </mbsc-card-content>
 </mbsc-card>
 
